# MGM-Omni

./: .gitignore  .gitmodules  README.md  pyproject.toml
mgm/: constants.py  conversation.py  mm_utils.py
mgm/eval/long_tts_eval/: eval_long_tts.py  evaluation.py  long_tts_eval.md
mgm/model/: __init__.py  builder.py  mgm_arch.py  mgm_arch_tts.py
mgm/model/language_model/: mgm_omni.py  mgm_qwen25vl.py  mgm_tts.py
mgm/model/multimodal_encoder/: builder.py  dual_audio_encoder.py  qwen2_5_vl_encoder.py  qwen2_audio_encoder.py  siglip_encoder.py  whisper_encoder.py
mgm/model/multimodal_generator/: mgm_omni_generation.py  mgm_omni_streamer.py  mgm_tts_generation.py  tts_adapter.py
mgm/model/multimodal_projector/: builder.py
mgm/model/qwen2_5_vl/: configuration_qwen2_5_vl.py
mgm/serve/: cli.py  cli_tts.py  utils.py  web_demo.py
